--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -10,6 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.12.2"
+    "@pinia/nuxt": "^0.5.1",
+    "nuxt": "^3.12.2",
+    "pinia": "^2.1.7"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
