--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.2",
+    "nuxt-socket-io": "^3.0.10",
     "pinia": "^2.1.7"
   },
   "overrides": {
