generate random words

--- a/node/package.json
+++ b/node/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "random-words": "^2.0.1",
     "socket.io": "^4.7.5"
   }
 }
